# rust-waveshare-4.2-esp32

./: Cargo.toml  Readme.md
.cargo/: config.toml
src/: main.rs
